--- a/.github/workflows/01-build-patternhub.yml
+++ b/.github/workflows/01-build-patternhub.yml
@@ -90,7 +90,7 @@ jobs:
           ASSET_PASSWORD: ${{ secrets.ASSET_PASSWORD }}
           NEXT_PUBLIC_BASE_PATH: ${{ steps.base-path.outputs.result }}
         run: |
-          npx --no tsx scripts/md-resolve-svg.ts
+          pnpm exec tsx scripts/md-resolve-svg.ts
           pnpm --filter=patternhub run build
           echo "path=${NEXT_PUBLIC_BASE_PATH}" >> $GITHUB_OUTPUT
 
