--- a/showcases/angular-showcase/package.json
+++ b/showcases/angular-showcase/package.json
@@ -6,14 +6,14 @@
     "build": "ng build",
     "dev": "pnpm run start --open",
     "ng": "ng",
-    "preview": "npx http-server ../../build-showcases",
+    "preview": "pnpm exec http-server ../../build-showcases",
     "start": "ng serve --serve-path angular-showcase",
-    "test:a11y-checker": "cross-env showcase=angular-showcase npx playwright test --config=../playwright.a11y-checker.ts",
-    "test:aria-snapshots": "cross-env showcase=angular-showcase npx playwright test --config=../playwright.aria-snapshots.ts",
-    "test:axe-core": "cross-env showcase=angular-showcase npx playwright test --config=../playwright.axe-core.ts",
-    "test:e2e": "cross-env showcase=angular-showcase npx playwright test --config=../playwright.config.ts",
+    "test:a11y-checker": "cross-env showcase=angular-showcase pnpm exec playwright test --config=../playwright.a11y-checker.ts",
+    "test:aria-snapshots": "cross-env showcase=angular-showcase pnpm exec playwright test --config=../playwright.aria-snapshots.ts",
+    "test:axe-core": "cross-env showcase=angular-showcase pnpm exec playwright test --config=../playwright.axe-core.ts",
+    "test:e2e": "cross-env showcase=angular-showcase pnpm exec playwright test --config=../playwright.config.ts",
     "test:ui": "pnpm run test:e2e --ui",
-    "test:visual-snapshots": "cross-env showcase=angular-showcase npx playwright test --config=../playwright.visual-snapshots.ts",
+    "test:visual-snapshots": "cross-env showcase=angular-showcase pnpm exec playwright test --config=../playwright.visual-snapshots.ts",
     "watch": "ng build --watch --configuration development"
   },
   "dependencies": {
