--- a/showcases/stencil-showcase/package.json
+++ b/showcases/stencil-showcase/package.json
@@ -9,14 +9,14 @@
     "dev:stencil": "pnpm --filter=@db-ux/wc-core-components run start",
     "ng": "ng",
     "prebuild": "pnpm --filter=@db-ux/wc-core-components run build",
-    "preview": "npx http-server ../../build-showcases",
+    "preview": "pnpm exec http-server ../../build-showcases",
     "start": "ng serve --port 4202 --serve-path stencil-showcase",
-    "test:a11y-checker": "cross-env showcase=stencil-showcase npx playwright test --config=../playwright.a11y-checker.ts",
-    "test:aria-snapshots": "cross-env showcase=stencil-showcase npx playwright test --config=../playwright.aria-snapshots.ts",
-    "test:axe-core": "cross-env showcase=stencil-showcase npx playwright test --config=../playwright.axe-core.ts",
-    "test:e2e": "cross-env showcase=stencil-showcase npx playwright test --config=../playwright.config.ts",
+    "test:a11y-checker": "cross-env showcase=stencil-showcase pnpm exec playwright test --config=../playwright.a11y-checker.ts",
+    "test:aria-snapshots": "cross-env showcase=stencil-showcase pnpm exec playwright test --config=../playwright.aria-snapshots.ts",
+    "test:axe-core": "cross-env showcase=stencil-showcase pnpm exec playwright test --config=../playwright.axe-core.ts",
+    "test:e2e": "cross-env showcase=stencil-showcase pnpm exec playwright test --config=../playwright.config.ts",
     "test:ui": "pnpm run test:e2e --ui",
-    "test:visual-snapshots": "cross-env showcase=stencil-showcase npx playwright test --config=../playwright.visual-snapshots.ts",
+    "test:visual-snapshots": "cross-env showcase=stencil-showcase pnpm exec playwright test --config=../playwright.visual-snapshots.ts",
     "watch": "ng build --watch --configuration development"
   },
   "dependencies": {
