--- a/output/react/package.json
+++ b/output/react/package.json
@@ -18,7 +18,7 @@
     "mv:dist": "cpr dist ../../build-outputs/react/dist --overwrite",
     "mv:package.json": "cpr package.json ../../build-outputs/react/package.json --overwrite",
     "mv:readme": "cpr README.md ../../build-outputs/react/README.md --overwrite",
-    "open:report": "npx playwright show-report",
+    "open:report": "pnpm exec playwright show-report",
     "postbuild": "pnpm --parallel run '/^mv:[^:]*$/'",
     "regenerate:screenshots": "playwright test --config playwright.config.ts --update-snapshots",
     "test:components": "playwright test --config playwright.config.ts",
