--- a/showcases/vue-showcase/package.json
+++ b/showcases/vue-showcase/package.json
@@ -7,13 +7,13 @@
     "build": "pnpm run '/^build:[^:]*$/'",
     "build:01_vite": "vite build",
     "dev": "vite --open",
-    "preview": "npx http-server ../../build-showcases",
+    "preview": "pnpm exec http-server ../../build-showcases",
     "start": "vite",
-    "test:a11y-checker": "cross-env showcase=vue-showcase npx playwright test --config=../playwright.a11y-checker.ts",
-    "test:aria-snapshots": "cross-env showcase=vue-showcase npx playwright test --config=../playwright.aria-snapshots.ts",
-    "test:axe-core": "cross-env showcase=vue-showcase npx playwright test --config=../playwright.axe-core.ts",
-    "test:e2e": "cross-env showcase=vue-showcase npx playwright test --config=../playwright.config.ts",
-    "test:visual-snapshots": "cross-env showcase=vue-showcase npx playwright test --config=../playwright.visual-snapshots.ts"
+    "test:a11y-checker": "cross-env showcase=vue-showcase pnpm exec playwright test --config=../playwright.a11y-checker.ts",
+    "test:aria-snapshots": "cross-env showcase=vue-showcase pnpm exec playwright test --config=../playwright.aria-snapshots.ts",
+    "test:axe-core": "cross-env showcase=vue-showcase pnpm exec playwright test --config=../playwright.axe-core.ts",
+    "test:e2e": "cross-env showcase=vue-showcase pnpm exec playwright test --config=../playwright.config.ts",
+    "test:visual-snapshots": "cross-env showcase=vue-showcase pnpm exec playwright test --config=../playwright.visual-snapshots.ts"
   },
   "dependencies": {
     "sa11y": "4.1.10",
