--- a/output/react/package.json
+++ b/output/react/package.json
@@ -19,7 +19,7 @@
     "mv:package.json": "cpr package.json ../../build-outputs/react/package.json --overwrite",
     "mv:readme": "cpr README.md ../../build-outputs/react/README.md --overwrite",
     "open:report": "pnpm exec playwright show-report",
-    "postbuild": "pnpm --parallel run '/^mv:[^:]*$/'",
+    "postbuild": "pnpm --parallel run '/^mv:[^:]+$/'",
     "regenerate:screenshots": "playwright test --config playwright.config.ts --update-snapshots",
     "test:components": "playwright test --config playwright.config.ts",
     "test:windows": "playwright test --config playwright.screen-reader.win.ts",
