--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "commit:updated-snapshots": "git diff --name-only --diff-filter=M | xargs git add && git commit --message 'test: updated snapshots'",
     "dev": "pnpm --filter='./scripts' run dev",
     "generate:component": "pnpm --filter=@db-ux/core-components run generate:component",
-    "lint": "pnpm --parallel run '/^lint:[^:]*$/'",
+    "lint": "pnpm --parallel run '/^lint:[^:]+$/'",
     "lint:jscpd": "jscpd . --exitCode 1 --config .config/.jscpd.json",
     "lint:markdownlint": "markdownlint --config .config/.markdown-lint.yml **/*.md",
     "lint:stylelint": "stylelint **/*.{css,scss}",
