refactor: not installing npm, but pnpm

--- a/.github/workflows/01-build-outputs.yml
+++ b/.github/workflows/01-build-outputs.yml
@@ -46,9 +46,7 @@ jobs:
           path: output
 
       - name: 📥 Install output dependencies
-        uses: bahmutov/npm-install@v1
-        with:
-          install-command: pnpm install
+        run: pnpm install
 
       - name: 🔨 Build outputs
         run: pnpm run build-outputs
