--- a/scripts/package.json
+++ b/scripts/package.json
@@ -5,7 +5,7 @@
   "description": "contains scripts for monorepo",
   "scripts": {
     "build": "npm-run-all build:foundations build:components build:migration build:stylelint",
-    "build-outputs": "pnpm --parallel run '/^build-outputs:[^:]+$/'",
+    "build-outputs": "pnpm --parallel run '/^build-outputs:[^:]*$/'",
     "build-outputs:components": "pnpm --filter=@db-ux/core-components run copy-output",
     "build-outputs:foundations": "pnpm --filter=@db-ux/core-foundations run copy-build",
     "build-outputs:migration": "pnpm --filter=@db-ux/core-migration run copy-build",
@@ -15,7 +15,7 @@
     "build-outputs:stylelint": "pnpm --filter=@db-ux/core-stylelint run copy-output",
     "build-outputs:v-core-components": "pnpm --filter=@db-ux/v-core-components run build",
     "build-outputs:wc-core-components": "pnpm --filter=@db-ux/wc-core-components run build",
-    "build-showcases": "pnpm --parallel run '/^build-showcases:[^:]+$/'",
+    "build-showcases": "pnpm --parallel run '/^build-showcases:[^:]*$/'",
     "build-showcases:angular": "pnpm --filter=angular-showcase run build",
     "build-showcases:angular-ssr": "pnpm --filter=angular-ssr-showcase run build",
     "build-showcases:next": "pnpm --filter=next-showcase run build",
@@ -53,7 +53,7 @@
     "rm-builds:patternhub-src-tsx": "rimraf --glob ../showcases/patternhub/components/src/**/*.tsx",
     "rm-builds:playwright": "rimraf --glob output/react/playwright",
     "rm-builds:showcases-build": "rimraf --glob  build-showcases/**",
-    "rm:builds": "pnpm --parallel run '/^rm-builds:[^:]+$/'",
+    "rm:builds": "pnpm --parallel run '/^rm-builds:[^:]*$/'",
     "start-showcase:angular": "pnpm --filter=angular-showcase run dev",
     "start-showcase:angular-ssr": "pnpm --filter=angular-ssr-showcase run dev",
     "start-showcase:next": "pnpm --filter=next-showcase run dev",
@@ -63,7 +63,7 @@
     "start-showcase:stencil": "pnpm --filter=stencil-showcase run dev",
     "start-showcase:vue": "pnpm --filter=vue-showcase run dev",
     "start:foundations": "pnpm --filter=@db-ux/core-foundations run start",
-    "test": "pnpm --parallel run '/^test:[^:]+$/'",
+    "test": "pnpm --parallel run '/^test:[^:]*$/'",
     "test:migration": "pnpm --filter=@db-ux/core-migration run test",
     "test:scripts": "vitest run --config vitest.config.ts",
     "update:icon-fonts": "npm-run-all generate:icon-fonts generate:icon-types"
