Revert "refactor: enable MacOS tests again (#4665)"
This reverts commit 15a0b34e4b68191d0920b357c8f0182d67208831.

--- a/.github/workflows/02-e2e-screen-reader.yml
+++ b/.github/workflows/02-e2e-screen-reader.yml
@@ -18,7 +18,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-14, windows-2022]
+        # TODO: enable again after guidepup controlling Voiceover on MacOS 14 and 15 gets more stable
+        # os: [macos-13, windows-2022]
+        os: [windows-2022] # macOS is not perfectly supported yet, we disable it for now
         shardIndex: [1, 2, 3, 4]
         shardTotal: [4]
     steps:
