--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -42,7 +42,7 @@
     "start": "nodemon --watch src --watch scripts --watch scripts --ext js,tsx,ts,scss,json --exec \"pnpm run build\""
   },
   "dependencies": {
-    "@db-ux/core-foundations": "*"
+    "@db-ux/core-foundations": "workspace:*"
   },
   "devDependencies": {
     "@builder.io/eslint-plugin-mitosis": "0.0.17",
