--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "build": "npm run build --workspace=scripts",
     "build-outputs": "npm run build-outputs --workspace=scripts",
     "build-showcases": "npm run build-showcases --workspace=scripts",
+    "changeset": "changeset",
     "clean": "git clean -dfx --exclude=.env",
     "codestyle": "prettier . --write",
     "commit:updated-snapshots": "git diff --name-only --diff-filter=M | xargs git add && git commit --message 'test: updated snapshots'",
@@ -62,6 +63,9 @@
     "prepare": "husky",
     "regenerate:screenshots": "npm run build && npm run build --workspace=react-showcase && docker-compose --file ./e2e/docker-compose.regenerate.yml up",
     "regenerate:screenshots:rebuild": "npm run rm:builds && node scripts/rebuild-e2e.js",
+    "release:publish": "node scripts/github/publish-npm.js",
+    "release:status": "changeset status --verbose",
+    "release:version": "changeset version",
     "rm:builds": "npm run rm:builds --workspace=scripts",
     "start": "npm run start --workspace=patternhub",
     "test": "npm run test --workspace=scripts",
@@ -86,6 +90,7 @@
     "@angular/ssr": "19.2.15",
     "@axe-core/playwright": "4.10.2",
     "@babel/eslint-parser": "7.28.0",
+    "@changesets/cli": "^2.29.5",
     "@commitlint/cli": "19.8.1",
     "@commitlint/config-conventional": "19.8.1",
     "@db-ux/db-theme": "4.0.0",
