feat: added stylelint pattern

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -87,3 +87,6 @@ updates:
       guidepup:
         patterns:
           - "@guidepup/*"
+      stylelint:
+        patterns:
+          - "stylelint*"
