--- a/.github/workflows/pr-html-snapshot-diff.yml
+++ b/.github/workflows/pr-html-snapshot-diff.yml
@@ -43,11 +43,11 @@ jobs:
           git diff --unified=3 --no-color origin/main...HEAD -- "__snapshots__/**/*.html" > html-snapshots.diff || true
           git diff --name-status origin/main...HEAD -- "__snapshots__/**/*.html" > html-snapshots.list || true
 
-          TOTAL=$(wc -l < html-snapshots.list | tr -d ' ' || echo "0")
-          ADDED=$(grep -E '^[A]\s' html-snapshots.list | wc -l | tr -d ' ' || echo "0")
-          MOD=$(grep -E '^[M]\s' html-snapshots.list | wc -l | tr -d ' ' || echo "0")
-          DEL=$(grep -E '^[D]\s' html-snapshots.list | wc -l | tr -d ' ' || echo "0")
-          REN=$(grep -E '^[R]\d*\s' html-snapshots.list | wc -l | tr -d ' ' || echo "0")
+          TOTAL=$(wc -l < html-snapshots.list 2>/dev/null | tr -d ' ' || echo "0")
+          ADDED=$(grep -E '^[A]\s' html-snapshots.list 2>/dev/null | wc -l | tr -d ' ' || echo "0")
+          MOD=$(grep -E '^[M]\s' html-snapshots.list 2>/dev/null | wc -l | tr -d ' ' || echo "0")
+          DEL=$(grep -E '^[D]\s' html-snapshots.list 2>/dev/null | wc -l | tr -d ' ' || echo "0")
+          REN=$(grep -E '^[R]\d*\s' html-snapshots.list 2>/dev/null | wc -l | tr -d ' ' || echo "0")
 
           echo "total=${TOTAL}" >> "$GITHUB_OUTPUT"
           echo "added=${ADDED}" >> "$GITHUB_OUTPUT"
@@ -84,8 +84,7 @@ jobs:
             echo "<!-- html-snapshot-summary-marker -->"
           } > snapshot-summary.md
 
-          B64=$(base64 -w0 snapshot-summary.md 2>/dev/null || base64 snapshot-summary.md)
-          echo "summary_md_b64=${B64}" >> "$GITHUB_OUTPUT"
+          echo "SUMMARY_MD_PATH=$(pwd)/snapshot-summary.md" >> "$GITHUB_ENV"
 
       - name: 📎 Upload unified diff (artifact)
         if: steps.diff.outputs.total != '0'
@@ -99,12 +98,17 @@ jobs:
       - name: 💬 Upsert PR comment
         uses: actions/github-script@v7
         env:
-          SUMMARY_MD: ${{ steps.diff.outputs.SUMMARY_MD }}
+          SUMMARY_MD_PATH: ${{ env.SUMMARY_MD_PATH }}
         with:
           script: |
-            const body = process.env.SUMMARY_MD || '_No snapshot info._';
+            const fs = require('fs');
             const { owner, repo, number } = context.issue;
             const marker = '<!-- html-snapshot-summary-marker -->';
+            let body = '_No snapshot info._';
+            try {
+              const p = process.env.SUMMARY_MD_PATH;
+              if (p && fs.existsSync(p)) body = fs.readFileSync(p, 'utf8');
+            } catch {}
             const { data: comments } = await github.rest.issues.listComments({ owner, repo, issue_number: number, per_page: 100 });
             const existing = comments.find(c => c.user?.type === 'Bot' && c.body?.includes(marker));
             if (existing) {
