--- a/.github/workflows/pull-request-snapshot-diff.yml
+++ b/.github/workflows/pull-request-snapshot-diff.yml
@@ -134,26 +134,24 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-          # JSON statt Text parsen (robust gegen Format-/Sprachänderungen)
           npx -y @changesets/cli@^2 status --since=origin/main --output=json > .changeset-status.json || true
 
-          node <<'NODE'
+          node > .changeset-env <<'NODE'
           const fs = require('fs');
           let hasMinor = 0, hasMajor = 0;
           try {
-            const j = JSON.parse(fs.readFileSync('.changeset-status.json','utf8'));
-            // j.releases ist eine Liste mit { name, type: "patch"|"minor"|"major" }
-            for (const r of j.releases || []) {
-              if (r.type === 'minor') hasMinor = 1;
-              if (r.type === 'major') hasMajor = 1;
+            const txt = fs.readFileSync('.changeset-status.json', 'utf8').trim();
+            if (txt) {
+              const j = JSON.parse(txt);
+              for (const r of (j.releases || [])) {
+                if (r.type === 'minor') hasMinor = 1;
+                if (r.type === 'major') hasMajor = 1;
+              }
             }
-          } catch (e) {
-            // Wenn parsing fehlschlägt, bleiben Flags 0 -> Guard greift konservativ
-          }
-          // Werte für nachfolgende Steps bereitstellen
-          console.log(`HAS_MINOR=${hasMinor}`);
-          console.log(`HAS_MAJOR=${hasMajor}`);
-          NODE | tee -a "$GITHUB_ENV"
+          } catch (_) {}
+          process.stdout.write(`HAS_MINOR=${hasMinor}\nHAS_MAJOR=${hasMajor}\n`);
+          NODE
+          cat .changeset-env >> "$GITHUB_ENV"
 
       - name: 🚦 Enforce Snapshot changes require >= minor
         if: env.SNAP_TOTAL != '0'
