--- a/__snapshots__/button/showcase/webkit/should-have-same-aria-snapshot/DBButton-should-have-same-aria-snapshot.yaml
+++ b/__snapshots__/button/showcase/webkit/should-have-same-aria-snapshot/DBButton-should-have-same-aria-snapshot.yaml
@@ -1,6 +1,6 @@
 - main:
   - heading "DBButton" [level=1]
-  - link "Density11111"
+  - link "Density"
   - button "Functional"
   - button "(Default) Regular"
   - button "Expressive"
