--- a/package.json
+++ b/package.json
@@ -135,7 +135,7 @@
     "typescript": "5.8.3",
     "validate-branch-name": "1.3.2",
     "vite": "6.3.5",
-    "vite-plugin-devtools-json": "^1.0.0",
+    "vite-plugin-devtools-json": "1.0.0",
     "vitest": "3.2.4",
     "xo": "1.2.2",
     "zone.js": "0.15.1"
