--- a/.github/actions/auto-commit/action.yml
+++ b/.github/actions/auto-commit/action.yml
@@ -65,7 +65,15 @@ runs:
         NEW_PR_BRANCH: ${{ inputs.branch-name }}
         BASE_BRANCH: ${{ github.head_ref }}
       run: |
-        gh pr create --base "$BASE_BRANCH" --head "$NEW_PR_BRANCH" --title "Automated PR: $COMMIT_MESSAGE" --body "This PR was created automatically by a GitHub Action."
+        PR_BODY="This PR was created automatically by a GitHub Action."
+        # Create the PR and capture its URL
+        PR_URL=$(gh pr create --base "$BASE_BRANCH" --head "$NEW_PR_BRANCH" --title "Automated PR: $COMMIT_MESSAGE" --body "$PR_BODY")
+
+        # Find the PR URL for the base branch
+        BASE_PR_URL=$(gh pr list --base "$BASE_BRANCH" --state open --json url --jq '.[0].url')
+
+        # Update the PR body to include the base branch PR URL
+        gh pr edit "$PR_URL" --body "$PR_BODY\n\nBase branch PR: $BASE_PR_URL"
 
     # https://docs.github.com/en/apps/creating-github-apps/authenticating-with-a-github-app/making-authenticated-api-requests-with-a-github-app-in-a-github-actions-workflow
     - name: 🧬 Generate a token
