--- a/.github/actions/auto-commit/action.yml
+++ b/.github/actions/auto-commit/action.yml
@@ -69,13 +69,13 @@ runs:
         # Create the PR and capture its URL
         PR_URL=$(gh pr create --base "$BASE_BRANCH" --head "$NEW_PR_BRANCH" --title "Automated PR: $COMMIT_MESSAGE" --body "$PR_BODY")
 
-        # Find the PR URL for the base branch
-        BASE_PR_URL=$(gh pr list --base "$BASE_BRANCH" --state open --json url --jq '.[0].url')
+        # Find the PR URL that will merge this PR (i.e., the PR with this branch as its head)
+        TARGET_PR_URL=$(gh pr list --head "$NEW_PR_BRANCH" --state open --json url --jq '.[0].url')
 
-        # Update the PR body to include the base branch PR URL
+        # Update the PR body to include the target PR URL
         gh pr edit "$PR_URL" --body "$PR_BODY
 
-        Base branch PR: $BASE_PR_URL"
+        Target PR (this PR will be merged into): $TARGET_PR_URL"
 
     # https://docs.github.com/en/apps/creating-github-apps/authenticating-with-a-github-app/making-authenticated-api-requests-with-a-github-app-in-a-github-actions-workflow
     - name: 🧬 Generate a token
